Fix double-tap bug on Safari iOS

--- a/examples/src/styles.css
+++ b/examples/src/styles.css
@@ -152,3 +152,5 @@ h1, h2 {
     display: block;
   }
 }
+
+@media (pointer: fine) {}
